# ysmirnov_dz_27_avito

./: README.md  db.sqlite3  manage.py  pyproject.toml
ads/: models.py  serializers.py  views.py
ads/migrations/: 0001_initial.py
ads/urls/: ad.py  cat.py
ads/views/: ad.py  cat.py
datasets/: ad.csv  ad.json  ads.csv  ads.json  categories.json  csv_to_json.py  location.json  user.json
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_location_lat_and_more.py
users/urls/: location.py  user.py
ysmirnov_dz_27_avito/: asgi.py  settings.py  urls.py  wsgi.py
